[package]
name = "ecdna-lib"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
csv = "1.1"
derive_builder = "0.12"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.0"
serde_json = "1.0.89"
serde = { version = "1.0.150", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
