[package]
name = "ecdna-lib"
version = "2.0.4"
edition = "2021"
repository = "https://github.com/fraterenz/ecdna-lib"
description = "The ecDNA distribution for the evolutionary of extra-chromosomal DNA (ecDNA)"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
csv = "1.1"
derive_builder = "0.12"
hdrhistogram = "7.5.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.0"
serde_json = "1.0.89"
serde = { version = "1.0.150", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "stats"
harness = false
